--- a/frontend/style.css
+++ b/frontend/style.css
@@ -196,3 +196,7 @@ body, html {
 #history-list li:hover {
     text-decoration: underline;
 }
+.fa-map-marker {
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    transform: translate(-50%, -50%); /* Center the icon on the coordinate */
+}
